added search endpoint
