# src/routes/food.ts
@@ -5,6 +5,7 @@ const router = express.Router();
 
 router.post('/', handler.createFood);
 router.get('/', handler.getAllFoods);
+router.get('/search', handler.searchFood);
 router.get('/:id', handler.getFoodById);
 router.put('/:id', handler.updateFood);
 router.delete('/:id', handler.deleteFood);
